[package]
name = "des-mitm-rs"
version = "0.1.0"
authors = ["m-m-adams <52469396+m-m-adams@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
des = "0.0.2"
block-modes = "0.7.0"
hex-literal = "0.3.1"
byteorder = "1"