[package]
name = "des_mitm"
version = "0.1.0"
authors = ["m-m-adams <52469396+m-m-adams@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
openssl = "0.10.33"
crossbeam-channel = "0.5.0"